1999-08-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Selector.java (hashCode, equals): New methods.
	(Selector): Allow duplicate methods to be found, but check
	that the types are the same.

1999-07-27  Vladimir Jojic  <vjojic@ute.santafe.edu>

	* PhaseCImpl.java (_copy_creating_phase_to_using_phase): 
	New function that copies values of variables from creating 
	phase object to using phase object.
	
1999-07-21  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.java: New methods that correspond to macros
	in simtoolsgui.

1999-07-12  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.java: New getCurrent... methods that correspond
	to calls of getCurrent... macros from activity.h
	(probeLibrary): New field.	
	New create...ProbeDisplay methods that correspond to 
	CREATE_..._PROBE_DISPLAY macros from simtoolsgui.h
	Add new ControlState... fields that correspond to
	ControlState... Symbols from simtoolsgui.

1999-07-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (class-protocols, interface-protocols,
	module-create-classes, module-using-classes): New macros.
	(module-classes, module-interfaces): Changed from -files to
	plural.
	(install-java-classes-as-files): Do separate phase by phase
	expansion to avoid command line argument overlow on Irix 6.5.

1999-07-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (Selector.class): Depend on
	NonUniqueMethodSignatureException.class and
	SignatureNotFoundException.class.

1999-07-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in: Use $(module_creatable_PROTOCOLS) for classes,
	$(module_[non]creatable_PROTOCOLS) for interfaces.

	* Makefile.rules.in (INTERFACES, _CLASSES): Likewise.

1999-06-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* PhaseCImpl.java: New file.

	* SwarmEnvironment.java: Accomodate U -> C suffix change.

	* Makefile.in (CLASSPHASES, module-class-files,
	module-interface-files): Make using phase the unqualified one.